[package]
name = "casbin-raft-proto"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic        = "^0.3"
bytes        = "^0.5"
prost        = "^0.6"
prost-types  = "^0.6"
prost-derive = "^0.6"
raft         = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }

[build-dependencies]
tonic-build       = "^0.3"
