[package]
name = "casbin-raft-types"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait  = "^0.1"
casbin       = { version = "2.0", default-features = false, features = [ "incremental", "runtime-tokio" ] }
raft         = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }
slog         = "^2.5"
thiserror    = "^1.0"
tonic        = "^0.3"

[build-dependencies]
tonic-build       = "^0.3"
